--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,29 +12,28 @@
         android:id="@+id/ecg_graph"
         android:layout_width="wrap_content"
         android:layout_height="219dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tst_etX"
-        android:layout_width="295dp"
+        android:layout_width="164dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="34dp"
         android:layout_marginEnd="33dp"
-        android:layout_marginRight="33dp"
         android:layout_marginStart="273dp"
-        android:layout_marginLeft="273dp"
         android:layout_marginTop="71dp"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/tst_etY"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ecg_graph" />
 
     <EditText
         android:id="@+id/tst_etY"
-        android:layout_width="299dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="153dp"
         android:layout_marginEnd="29dp"
@@ -45,6 +44,7 @@
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tst_etX" />
 
