--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,10 +12,10 @@
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_history"
             android:title="History" />
-        <item
+      <!--  <item
             android:id="@+id/nav_advice"
             android:icon="@drawable/ic_sfat"
-            android:title="Advice" />
+            android:title="Advice" /> ca nu prea avem ce sfat sa ii dam. nu are rost sa facem pagina separat-->
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
