nav drawer done

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -12,7 +14,9 @@
         android:id="@+id/ecg_graph"
         android:layout_width="wrap_content"
         android:layout_height="219dp"
-        android:layout_marginTop="52dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="52dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,10 +24,9 @@
         android:id="@+id/tst_etX"
         android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="34dp"
-        android:layout_marginEnd="33dp"
-        android:layout_marginStart="273dp"
-        android:layout_marginTop="71dp"
+        android:layout_above="@+id/tst_etY"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="39dp"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/tst_etY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,12 +38,9 @@
         android:id="@+id/tst_etY"
         android:layout_width="185dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="153dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginRight="29dp"
-        android:layout_marginStart="273dp"
-        android:layout_marginLeft="273dp"
-        android:layout_marginTop="34dp"
+        android:layout_above="@+id/ecg_graph"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="210dp"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,16 +52,12 @@
         android:id="@+id/tst_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:layout_marginEnd="445dp"
-        android:layout_marginRight="445dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="234dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:text="add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ecg_graph" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
