--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,19 +8,18 @@
             android:id="@+id/nav_main"
             android:icon="@drawable/ic_home"
             android:title="Main Page" />
-        <item
+       <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_history"
-            android:title="History" />
+            android:title="Historic"
+            />
+
+
+
       <!--  <item
             android:id="@+id/nav_advice"
             android:icon="@drawable/ic_sfat"
             android:title="Advice" /> ca nu prea avem ce sfat sa ii dam. nu are rost sa facem pagina separat-->
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_settings"
-            android:title="Settings" />
-
     </group>
 
     <item android:title="Feedback">
