--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.oneup.cosmin.xheart.activities.MainActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -15,41 +16,15 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@drawable/app_bar_main_bg"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
 
-</android.support.design.widget.CoordinatorLayout>
-<!--
-//gen sus? unde o sa pun si graficele . daca esti meserias faci partea pe care ti-o arat imd un culori de la rosu la verde (status sht)
-//intelegi? da pai plm fac un switch    ce plm vrea si asta???
-//da in funtice de ce?
-//ca nu am cod1sec sa vad. paremise ca ai un coeficient de risc. o sa pun la cazuri un grad de severitate de la 1 la 10.
-//si in functie de cel mai mare grad faci aia. da-mi un tabel
-//gen 1-3 dark red (si numele) gen dangerye m
-
-//green (neon/bright/cat mai deschis) - Foarte bun (maxSeverity < luam 3 5 8 10? la 10 e cuie pe s, dar da
-//deci 0 3    3 5    5 8    8 10 ? da. am facut o clasa Range. e un interval si are o metoda isWithin(value). Daca 'value' este
-//in acea raza returneaza true, altfel false; iti scriu aici cod pt asta acum
-
-//private Range veryGoodRange = new Range (0,3,true, false);
-//private Range goodRange = new Rnage(3,5, true, false);
-//private Range badRange = new Range(5,8, true, false);
-//private Range dedRange = new Range(8,10, true, true);   cum mort ca e in engelza :)))))))))) d-aia am zis idk lasa-l asa de sanki
-
-//-> in cod acum cand vin conditiile, nu switch
-//private int checkValue(float value){
-   // if(veryGoodRange.isWithin(value){ schiumba culoare;
-   // else if (.....)... nana gata ok  pft buna la fel pwp :*
-    //} nu era comentariul inchis-->
+</LinearLayout>
