--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,63 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.oneup.cosmin.xheart.activities.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pulse"
+        android:padding="20dp"
+        android:paddingBottom="10dp"
+        android:textSize="25sp"/>
+
+
+    <TextView
+        android:id="@+id/tv_pulse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
+        android:paddingTop="5dp"
+        android:paddingBottom="20dp"
+        android:paddingRight="40dp"
+        android:textSize="30sp"
+        android:text="Waiting for submit"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="EKG"
+        android:padding="20dp"
+        android:textSize="25sp"/>
+
     <com.jjoe64.graphview.GraphView
         android:id="@+id/ecg_graph"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="219dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="52dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="20dp" />
 
-    <EditText
-        android:id="@+id/tst_etX"
-        android:layout_width="164dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tst_etY"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="39dp"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/tst_etY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ecg_graph" />
 
-    <EditText
-        android:id="@+id/tst_etY"
-        android:layout_width="185dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/ecg_graph"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="210dp"
-        android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tst_etX" />
-
-    <Button
-        android:id="@+id/tst_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:text="add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ecg_graph" />
-
-</RelativeLayout>
+</LinearLayout>
