--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="veryGood">#FF99CC00</color>
     <color name="good">#fff200</color>
     <color name="bad">#FFFFBB33</color>
-    <color name="ded">#FFCC0000</color>
+    <color name="verybad">#FFCC0000</color>
     <color name="green">#6DD594</color>
     <color name="blue">#7A88D1</color>
 </resources>
